bindings/c/include/wickra.h

typedef struct Ehma Ehma;
typedef struct ElderImpulse ElderImpulse;
typedef struct Ema Ema;
typedef struct EmpiricalModeDecomposition EmpiricalModeDecomposition;
typedef struct EvenBetterSinewave EvenBetterSinewave;
typedef struct EwmaVolatility EwmaVolatility;
typedef struct Expectancy Expectancy;
typedef struct Fama Fama;
typedef struct FisherRsi FisherRsi;
typedef struct FisherTransform FisherTransform;
typedef struct Frama Frama;
typedef struct GainLossRatio GainLossRatio;
typedef struct GainToPainRatio GainToPainRatio;
typedef struct Garch11 Garch11;
typedef struct GeneralizedDema GeneralizedDema;
typedef struct GeometricMa GeometricMa;
typedef struct HighpassFilter HighpassFilter;
typedef struct HilbertDominantCycle HilbertDominantCycle;
typedef struct HistoricalVolatility HistoricalVolatility;
void wickra_ehma_free(struct Ehma *handle);
struct ElderImpulse *wickra_elder_impulse_new(uintptr_t ema_period,
                                              uintptr_t macd_fast,
                                              uintptr_t macd_slow,
                                              uintptr_t macd_signal);
double wickra_elder_impulse_update(struct ElderImpulse *handle, double value);
void wickra_elder_impulse_batch(struct ElderImpulse *handle,
                                const double *input,
                                double *out,
                                uintptr_t n);
void wickra_elder_impulse_reset(struct ElderImpulse *handle);
void wickra_elder_impulse_free(struct ElderImpulse *handle);
struct Ema *wickra_ema_new(uintptr_t period);
double wickra_ema_update(struct Ema *handle, double value);
void wickra_ema_batch(struct Ema *handle, const double *input, double *out, uintptr_t n);
void wickra_ema_reset(struct Ema *handle);
void wickra_ema_free(struct Ema *handle);
struct EmpiricalModeDecomposition *wickra_empirical_mode_decomposition_new(uintptr_t period,
                                                                           double fraction);
double wickra_empirical_mode_decomposition_update(struct EmpiricalModeDecomposition *handle,
                                                  double value);
void wickra_empirical_mode_decomposition_batch(struct EmpiricalModeDecomposition *handle,
                                               const double *input,
                                               double *out,
                                               uintptr_t n);
void wickra_empirical_mode_decomposition_reset(struct EmpiricalModeDecomposition *handle);
void wickra_empirical_mode_decomposition_free(struct EmpiricalModeDecomposition *handle);
struct EvenBetterSinewave *wickra_even_better_sinewave_new(uintptr_t hp_period,
                                                           uintptr_t ssf_length);
double wickra_even_better_sinewave_update(struct EvenBetterSinewave *handle, double value);
void wickra_even_better_sinewave_batch(struct EvenBetterSinewave *handle,
                                       const double *input,
                                       double *out,
                                       uintptr_t n);
void wickra_even_better_sinewave_reset(struct EvenBetterSinewave *handle);
void wickra_even_better_sinewave_free(struct EvenBetterSinewave *handle);
struct EwmaVolatility *wickra_ewma_volatility_new(double lambda);
double wickra_ewma_volatility_update(struct EwmaVolatility *handle, double value);
void wickra_ewma_volatility_batch(struct EwmaVolatility *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_ewma_volatility_reset(struct EwmaVolatility *handle);
void wickra_ewma_volatility_free(struct EwmaVolatility *handle);
struct Expectancy *wickra_expectancy_new(uintptr_t period);
double wickra_expectancy_update(struct Expectancy *handle, double value);
void wickra_expectancy_batch(struct Expectancy *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_expectancy_reset(struct Expectancy *handle);
void wickra_expectancy_free(struct Expectancy *handle);
struct Fama *wickra_fama_new(double fast_limit, double slow_limit);
double wickra_fama_update(struct Fama *handle, double value);
void wickra_fama_batch(struct Fama *handle, const double *input, double *out, uintptr_t n);
void wickra_fama_reset(struct Fama *handle);
void wickra_fama_free(struct Fama *handle);
struct FisherRsi *wickra_fisher_rsi_new(uintptr_t period);
double wickra_fisher_rsi_update(struct FisherRsi *handle, double value);
void wickra_fisher_rsi_batch(struct FisherRsi *handle,
                             const double *input,
                             double *out,
                             uintptr_t n);
void wickra_fisher_rsi_reset(struct FisherRsi *handle);
void wickra_fisher_rsi_free(struct FisherRsi *handle);
struct FisherTransform *wickra_fisher_transform_new(uintptr_t period);
double wickra_fisher_transform_update(struct FisherTransform *handle, double value);
void wickra_fisher_transform_batch(struct FisherTransform *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_fisher_transform_reset(struct FisherTransform *handle);
void wickra_fisher_transform_free(struct FisherTransform *handle);
struct Frama *wickra_frama_new(uintptr_t period);
double wickra_frama_update(struct Frama *handle, double value);
void wickra_frama_batch(struct Frama *handle, const double *input, double *out, uintptr_t n);
void wickra_frama_reset(struct Frama *handle);
void wickra_frama_free(struct Frama *handle);
struct GainLossRatio *wickra_gain_loss_ratio_new(uintptr_t period);
double wickra_gain_loss_ratio_update(struct GainLossRatio *handle, double value);
void wickra_gain_loss_ratio_batch(struct GainLossRatio *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_gain_loss_ratio_reset(struct GainLossRatio *handle);
void wickra_gain_loss_ratio_free(struct GainLossRatio *handle);
struct GainToPainRatio *wickra_gain_to_pain_ratio_new(uintptr_t period);
double wickra_gain_to_pain_ratio_update(struct GainToPainRatio *handle, double value);
void wickra_gain_to_pain_ratio_batch(struct GainToPainRatio *handle,
                                     const double *input,
                                     double *out,
                                     uintptr_t n);
void wickra_gain_to_pain_ratio_reset(struct GainToPainRatio *handle);
void wickra_gain_to_pain_ratio_free(struct GainToPainRatio *handle);
struct Garch11 *wickra_garch11_new(double omega, double alpha, double beta);
double wickra_garch11_update(struct Garch11 *handle, double value);
void wickra_garch11_batch(struct Garch11 *handle, const double *input, double *out, uintptr_t n);
void wickra_garch11_reset(struct Garch11 *handle);
void wickra_garch11_free(struct Garch11 *handle);
struct GeneralizedDema *wickra_generalized_dema_new(uintptr_t period, double v);
double wickra_generalized_dema_update(struct GeneralizedDema *handle, double value);
void wickra_generalized_dema_batch(struct GeneralizedDema *handle,
                                   const double *input,
                                   double *out,
                                   uintptr_t n);
void wickra_generalized_dema_reset(struct GeneralizedDema *handle);
void wickra_generalized_dema_free(struct GeneralizedDema *handle);
struct GeometricMa *wickra_geometric_ma_new(uintptr_t period);
double wickra_geometric_ma_update(struct GeometricMa *handle, double value);
void wickra_geometric_ma_batch(struct GeometricMa *handle,
                               const double *input,
                               double *out,
                               uintptr_t n);
void wickra_geometric_ma_reset(struct GeometricMa *handle);
void wickra_geometric_ma_free(struct GeometricMa *handle);
struct HighpassFilter *wickra_highpass_filter_new(uintptr_t period);
double wickra_highpass_filter_update(struct HighpassFilter *handle, double value);
void wickra_highpass_filter_batch(struct HighpassFilter *handle,
                                  const double *input,
                                  double *out,
                                  uintptr_t n);
void wickra_highpass_filter_reset(struct HighpassFilter *handle);
void wickra_highpass_filter_free(struct HighpassFilter *handle);
struct HilbertDominantCycle *wickra_hilbert_dominant_cycle_new(void);
double wickra_hilbert_dominant_cycle_update(struct HilbertDominantCycle *handle, double value);
void wickra_hilbert_dominant_cycle_batch(struct HilbertDominantCycle *handle,
                                         const double *input,
                                         double *out,
                                         uintptr_t n);
void wickra_hilbert_dominant_cycle_reset(struct HilbertDominantCycle *handle);
void wickra_hilbert_dominant_cycle_free(struct HilbertDominantCycle *handle);
struct HistoricalVolatility *wickra_historical_volatility_new(uintptr_t period,
                                                              uintptr_t trading_periods);
double wickra_historical_volatility_update(struct HistoricalVolatility *handle, double value);