bindings/csharp/Wickra/Generated/NativeMethods.g.cs


    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ehma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_elder_impulse_new(nuint emaPeriod, nuint macdFast, nuint macdSlow, nuint macdSignal);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_elder_impulse_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_elder_impulse_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_elder_impulse_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_elder_impulse_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ema_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ema_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ema_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ema_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ema_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_empirical_mode_decomposition_new(nuint period, double fraction);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_empirical_mode_decomposition_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_empirical_mode_decomposition_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_empirical_mode_decomposition_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_empirical_mode_decomposition_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_even_better_sinewave_new(nuint hpPeriod, nuint ssfLength);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_even_better_sinewave_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_even_better_sinewave_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_even_better_sinewave_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_even_better_sinewave_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_ewma_volatility_new(double lambda);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_ewma_volatility_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_ewma_volatility_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ewma_volatility_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_ewma_volatility_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_expectancy_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_expectancy_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_expectancy_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_expectancy_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_expectancy_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_fama_new(double fastLimit, double slowLimit);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_fama_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_fama_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fama_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fama_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_fisher_rsi_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_fisher_rsi_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_fisher_rsi_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fisher_rsi_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fisher_rsi_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_fisher_transform_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_fisher_transform_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_fisher_transform_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fisher_transform_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_fisher_transform_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_frama_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_frama_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_frama_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_frama_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_frama_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_gain_loss_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_gain_loss_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_gain_loss_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_gain_loss_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_gain_loss_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_gain_to_pain_ratio_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_gain_to_pain_ratio_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_gain_to_pain_ratio_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_gain_to_pain_ratio_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_gain_to_pain_ratio_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_garch11_new(double omega, double alpha, double beta);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_garch11_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_garch11_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_garch11_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_garch11_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_generalized_dema_new(nuint period, double v);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_generalized_dema_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_generalized_dema_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_generalized_dema_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_generalized_dema_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_geometric_ma_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_geometric_ma_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_geometric_ma_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_geometric_ma_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_geometric_ma_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_highpass_filter_new(nuint period);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_highpass_filter_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_highpass_filter_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_highpass_filter_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_highpass_filter_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_hilbert_dominant_cycle_new();

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_hilbert_dominant_cycle_update(nint handle, double @value);

    [LibraryImport(WickraNative.LibraryName)]
    internal static unsafe partial void wickra_hilbert_dominant_cycle_batch(nint handle, double* input, double* @out, nuint n);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hilbert_dominant_cycle_reset(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial void wickra_hilbert_dominant_cycle_free(nint handle);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial nint wickra_historical_volatility_new(nuint period, nuint tradingPeriods);

    [LibraryImport(WickraNative.LibraryName)]
    internal static partial double wickra_historical_volatility_update(nint handle, double @value);
